--- a/advisor/templates/advisor/recommendations.html
+++ b/advisor/templates/advisor/recommendations.html
@@ -11,7 +11,7 @@
     <div class="logo">CloudPulse AI</div>
     <div class="header-title">Recommendations</div>
     <div class="navbar-controls">
-      <a href="{% url 'dashboard' %}" class="nav-user-button">Dashboard</a>
+      <a href="{% url 'advisor:dashboard' %}" class="nav-user-button">Dashboard</a>
     </div>
   </header>
 
